<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:columnCount="1"
        android:rowCount="17" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:text="@string/buttonremote"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/head"
            android:textStyle="bold"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:background="@color/white" />

        <Switch
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_row="2"
            android:textSize="@dimen/text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="3"
            android:background="@color/white" />

        <Switch
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_row="4"
            android:textSize="@dimen/text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:background="@color/white" />

        <Switch
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_row="6"
            android:textSize="@dimen/text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="7"
            android:background="@color/white" />

        <Switch
            android:id="@+id/buttonD"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:layout_row="8"
            android:textSize="@dimen/text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="9"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tempTitle"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_row="10"
            android:text="@string/temps"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/head"
            android:textStyle="bold"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="11"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tempA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_row="12"
            android:text="@string/tempA"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            android:textStyle="normal"
            android:typeface="sans" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="13"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tempB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_row="14"
            android:text="@string/tempB"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            android:textStyle="normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textinput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_row="17"
            android:background="@color/black"
            android:gravity="center"
            android:text="@string/noIn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </GridLayout>

</LinearLayout>